--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+	<link href="bootstrap.css" rel="stylesheet">
+</head>
+<body>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -40,4 +44,6 @@
   </div>
 </nav>
 
-Hello World
+<p>Hello World</p>
+
+</body>
