add css sandstone

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-	<link href="bootstrap.css" rel="stylesheet">
+	<link href="bootstrapSandstone.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-default">
